--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,7 +41,7 @@ authors = ["decipher3114 <decipher3114@gmail.com>"]
 publisher = "decipher3114"
 category = "Utility"
 copyright = "Copyright © 2024"
-formats = ["wix", "deb", "dmg"]
+formats = ["wix", "deb", "dmg", "rpm"]
 before-packaging-command = "cargo build --release"
 icons = ["assets/resources/windows/icon.ico", "assets/resources/macos/icon.icns", "assets/resources/linux/hicolor/*/apps/capter.png"]
 out-dir = "target/packages"
@@ -61,3 +61,14 @@ minimum-system-version = "10.13"
 
 [package.metadata.packager.deb]
 depends = ["libgtk-3-dev", "libxdo-dev", "libayatana-appindicator3-dev", "libxcb1", "libxrandr2", "libdbus-1-3"]
+
+[package.metadata.packager.rpm]
+name = "capter"
+version = "2.2.2"
+release = 1
+license = "MIT"
+summary = "A simple cross-platform screenshot tool"
+description = "Capter is a lightweight, cross-platform tool for capturing screenshots and managing screen content with ease."
+homepage = "https://yourhomepage.com"
+changelog = "CHANGELOG.md"
+requires = ["gtk3", "libxcb", "libxrandr", "dbus", "xdo"]
