--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,7 @@ permissions:
   contents: write
 
 on:
+  workflow_dispatch:
   push:
     tags:
       - v[0-9]+.*
@@ -83,9 +84,44 @@ jobs:
           path: |
             target/packages/*.dmg
 
+  build-rpm:
+    runs-on: fedora-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install Dependencies for RPM
+        run: |
+          sudo dnf install -y rpm-build createrepo libgtk-3-dev libxdo libappindicator-gtk3 libxcb libXrandr dbus
+
+      - name: Setup Rust
+        uses: actions-rust-lang/setup-rust-toolchain@v1
+        with:
+          toolchain: stable
+          target: x86_64-unknown-linux-gnu
+
+      - name: Build binary
+        run: |
+          cargo build --release
+
+      - name: Install cargo-packager
+        run: |
+          cargo install cargo-packager --locked
+
+      - name: Package RPM
+        run: |
+          cargo packager --release -v --format rpm
+
+      - name: Upload RPM Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: rpm_packages
+          path: |
+            target/packages/*.rpm
+
   upload-assets:
-    needs: build-assets
-    runs-on: 'ubuntu-latest'
+    needs: [build-assets, build-rpm]
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -97,9 +133,11 @@ jobs:
           token: ${{ github.token }}
           tag: ${{ github.ref_name }}
       
-      - name: Download Artifact
+      - name: Download Artifacts
         uses: actions/download-artifact@v4
-        
+        with:
+          name: rpm_packages
+
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
@@ -110,5 +148,6 @@ jobs:
             windows_packages/*
             linux_packages/*
             macos_packages/*
+            rpm_packages/*
           draft: false
           prerelease: false
