--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,8 +18,6 @@ jobs:
             os: ubuntu-latest
           - target: x86_64-apple-darwin
             os: macos-latest
-          - target: x86_64-pc-windows-msvc
-            os: windows-latest
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout
@@ -31,15 +29,6 @@ jobs:
         with:
           packages: libgtk-3-dev libxdo-dev libayatana-appindicator3-dev libxcb1 libxrandr2 libdbus-1-3
           version: 1.0
-
-      - name: Setup Windows
-        if: matrix.os == 'windows-latest'
-        run: |
-          dotnet tool install --global wix
-          $base64Cert = '${{ secrets.WINDOWS_CERT }}'
-          [System.IO.File]::WriteAllBytes("certificate.pfx", [System.Convert]::FromBase64String($base64Cert))
-          $password = ConvertTo-SecureString -String '${{ secrets.WINDOWS_CERT_PASSWORD }}' -Force -AsPlainText
-          Import-PfxCertificate -FilePath 'certificate.pfx' -CertStoreLocation 'Cert:\\CurrentUser\\My' -Password $password
 
       - name: Setup Rust
         uses: actions-rust-lang/setup-rust-toolchain@v1
@@ -59,15 +48,6 @@ jobs:
         run: |
           cargo packager --release -v
 
-      - name: Upload windows artifacts
-        uses: actions/upload-artifact@v4
-        if: matrix.os == 'windows-latest'
-        with:
-          name: windows_packages
-          path: |
-            target/packages/*.msi
-            target/packages/*.exe
-
       - name: Upload linux artifacts
         uses: actions/upload-artifact@v4
         if: matrix.os == 'ubuntu-latest'
@@ -85,7 +65,10 @@ jobs:
             target/packages/*.dmg
 
   build-rpm:
-    runs-on: fedora-latest
+    runs-on: ubuntu-latest
+    container:
+      image: fedora:latest
+      
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -145,7 +128,6 @@ jobs:
           body: |
             ${{ steps.changelog.outputs.changes }}
           files: |
-            windows_packages/*
             linux_packages/*
             macos_packages/*
             rpm_packages/*
